# ischeme

./: ChangeLog.md  Makefile  README.md  ischeme.cabal  package.yaml  stack.yaml
app/: Main.hs
ischeme-wasm/: .gitignore  CHANGELOG.md  ischeme-wasm.cabal
ischeme-wasm/app/: Main.hs
src/: AST.hs  CLI.hs  Eval.hs  Parser.hs  Repl.hs
