cabal-version:      2.4
name:               ischeme-wasm
version:            0.1.0.0
extra-source-files: CHANGELOG.md

library
  exposed-modules:
      AST
      CLI
      Eval
      Lib
      Parser
      Repl
  hs-source-dirs:
      src
  build-depends:
      base
    , containers
    , megaparsec
    , mtl
    , optparse-applicative
    , text
  default-language: Haskell2010

executable ischeme-wasm
    ghc-options: -optl--export-function=parseJSToSchemeO
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
      base
      , containers
      , megaparsec
      , mtl
      , optparse-applicative
      , aeson
      , text
      , bytestring
      , ischeme-wasm
    default-language: Haskell2010

